--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -28,7 +28,7 @@
             height: 80px;
             font-size: 16px;
             padding: 10px;
-            border: none;
+            border: 1px solid white; /* Thin white border */
             border-radius: 5px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             resize: none;
@@ -47,7 +47,7 @@
             font-size: 16px;
             margin: 5px;
             cursor: pointer;
-            border: none;
+            border: 1px solid white; /* Thin white border */
             border-radius: 5px;
             background-color: black; /* Black button background */
             color: #28a745; /* Green button text */
