--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -14,7 +14,7 @@
             min-height: 100vh;
             margin: 0;
             padding: 20px;
-            background-color: black; /* Black background */
+            background-color: #2c2c2c; /* Lighter background color */
             color: #28a745; /* Green text color */
         }
         h1 {
@@ -33,7 +33,7 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
             resize: none;
             color: #28a745; /* Green text color */
-            background-color: rgba(0, 0, 0, 0.8); /* Slightly transparent background */
+            background-color: rgba(50, 50, 50, 0.8); /* Slightly transparent dark gray background */
         }
         textarea::placeholder {
             color: #90ee90; /* Lighter green for placeholder text */
@@ -49,7 +49,7 @@
             cursor: pointer;
             border: 1px solid white; /* Thin white border */
             border-radius: 5px;
-            background-color: black; /* Black button background */
+            background-color: #2c2c2c; /* Matching button background */
             color: #28a745; /* Green button text */
             transition: background 0.3s, color 0.3s;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
@@ -63,7 +63,7 @@
             width: 100%;
             margin: auto;
             padding: 20px;
-            background-color: rgba(0, 0, 0, 0.9); /* Darker container */
+            background-color: rgba(70, 70, 70, 0.9); /* Darker container for contrast */
             border-radius: 10px;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.7);
         }
