--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -4,79 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spy Name Encryptor</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"> <!-- Futuristic font -->
     <style>
         body {
             font-family: 'Courier New', Courier, monospace; /* Monospaced font */
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            background-color: #0a0a0a; /* Dark background */
+            overflow: hidden;
+            color: #00ff00; /* Bright green text */
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 20px;
-            background: linear-gradient(135deg, #1a1a1a, #2a2a2a); /* Subtle gradient for depth */
-            color: #00ff00; /* Bright green text for a terminal look */
+            position: relative;
             overflow: hidden;
         }
-        h1 {
-            color: #00ff00; /* Bright green */
-            margin-bottom: 30px;
-            text-shadow: 0 0 15px rgba(0, 255, 0, 0.8); /* Glowing effect */
-            font-size: 2.5em; /* Larger font size */
+        /* Background animation */
+        .background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://media.giphy.com/media/1YpBviytPKfTof5D8D/giphy.gif') center center / cover no-repeat; /* Background image */
+            filter: blur(4px);
+            z-index: 1; /* Behind all other content */
         }
         .container {
-            max-width: 600px;
-            width: 100%;
-            background-color: rgba(20, 20, 20, 0.9); /* Darker background for contrast */
+            position: relative; /* Allow layering */
+            z-index: 2; /* In front of the background */
+            background: rgba(20, 20, 20, 0.9); /* Semi-transparent dark background */
             border-radius: 10px;
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            text-align: center; /* Centered text */
+            padding: 30px;
+            max-width: 600px;
+            width: 80%; /* Full width for smaller devices */
+            text-align: center; /* Center text */
+        }
+        h1 {
+            font-family: 'Orbitron', sans-serif; /* Futuristic font */
+            color: #00ffcc; /* Neon color */
+            margin-bottom: 30px;
+            text-shadow: 0 0 20px rgba(0, 255, 204, 0.8); /* Glowing effect */
+            font-size: 2.5em; /* Larger font size */
         }
         textarea {
-            width: 100%; /* Full width */
-            height: 80px;
-            font-size: 16px;
+            width: 100%;
+            height: 100px; /* Increased height */
+            font-size: 18px; /* Larger font */
             padding: 10px;
-            border: 2px solid #00ff00; /* Green border */
+            border: 2px solid #00ffcc; /* Light green border */
             border-radius: 5px;
             resize: none;
             color: #00ff00; /* Bright green text */
-            background-color: #2a2a2a; /* Dark gray for text area */
-            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5); /* Green glow effect */
-            transition: border-color 0.3s; /* Smooth transition for border color */
+            background-color: #1b1b1b; /* Darker area for contrast */
+            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); /* Glowing effect */
+            transition: border-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
         }
         textarea::placeholder {
-            color: rgba(0, 255, 0, 0.7); /* Dimmed placeholder color */
+            color: rgba(0, 255, 204, 0.7); /* Dimmed placeholder color */
         }
         textarea:focus {
             outline: none;
-            border-color: #00cc00; /* Lighter green when focused */
+            border-color: #00ccff; /* Lighter glow when focused */
+            box-shadow: 0 0 15px rgba(0, 204, 255, 0.8); /* Bright glow on focus */
         }
         input[type=button] {
-            padding: 10px 20px;
+            padding: 12px 25px;
             font-size: 16px;
             margin: 10px;
             cursor: pointer;
-            border: 2px solid #00ff00; /* Green border */
+            border: 2px solid #00ffcc; /* Light green border */
             border-radius: 5px;
-            background-color: #1a1a1a; /* Matching button background */
-            color: #00ff00; /* Bright green text */
-            transition: background 0.3s, color 0.3s, transform 0.1s; /* Smooth transitions */
-            box-shadow: 0 2px 5px rgba(0, 255, 0, 0.5);
+            background-color: #1a1a1a; /* Matching background */
+            color: #00ffcc; /* Bright green text */
+            transition: background 0.3s, color 0.3s, transform 0.2s, box-shadow 0.2s; /* Smooth transitions */
+            box-shadow: 0 4px 20px rgba(0, 204, 255, 0.5); /* Glow effect */
         }
         input[type=button]:hover {
-            background-color: #00ff00; /* Change button background to green on hover */
-            color: black; /* Change button text to black */
-            transform: scale(1.05); /* Slightly enlarge button on hover */
+            background-color: #00ffcc; /* Change button background on hover */
+            color: black; /* Button text changes to black */
+            transform: scale(1.1); /* Slightly enlarge button on hover */
+            box-shadow: 0 8px 30px rgba(0, 204, 255, 0.8); /* More pronounced glow on hover */
         }
         .terminal {
             margin: 20px 0;
-            border-left: 2px solid #00ff00; /* Left border to mimic terminal style */
-            padding-left: 10px;
+            border-left: 2px solid #00ffcc; /* Left border to mimic terminal style */
+            padding-left: 15px;
             text-align: left;
         }
-        /* Add a subtle animation to enhance the feel */
         @keyframes glitch {
             0% { opacity: 1; }
             20% { opacity: 0.8; }
@@ -92,8 +109,9 @@
 </head>
 <body>
 
+<div class="background"></div>  <!-- Background Animation -->
 <div class="container">
-    <h1 class="glitch" align="center">Spy Name Encryptor</h1>
+    <h1 class="glitch">Spy Name Encryptor</h1>
     
     <div class="terminal">
         <textarea id="myArea01" placeholder="Enter your text here...">Hello how are you</textarea>
