--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -3,80 +3,151 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Mario-like Game</title>
+    <title>Spy Name Encryptor</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"> <!-- Futuristic font -->
     <style>
         body {
+            font-family: 'Courier New', Courier, monospace;
             margin: 0;
-            background-color: #87CEEB; /* Sky Color */
-        }
-
-        #gameArea {
-            width: 800px;
-            height: 400px;
-            position: relative;
+            padding: 0;
+            height: 100vh;
+            background-color: #000; /* Solid black background */
+            color: #00ff00; /* Bright green text */
+            display: flex;
+            align-items: center;
+            justify-content: center;
             overflow: hidden;
-            border: 2px solid #000;
-            background-color: #87CEEB; /* Sky Color */
         }
-
-        #character {
-            width: 50px;
-            height: 50px;
-            position: absolute;
-            bottom: 50px; /* Start above ground */
-            background-color: red; /* Character color */
+        .container {
+            background-color: rgba(20, 20, 20, 0.9); /* Semi-transparent black */
+            border-radius: 10px;
+            box-shadow: 0 0 30px rgba(0, 255, 0, 0.8); /* Green glow around container */
+            padding: 30px;
+            max-width: 500px; /* Slightly smaller for sleekness */
+            width: 90%;
+            text-align: center;
         }
-
-        .ground {
+        h1 {
+            font-family: 'Orbitron', sans-serif; /* Futuristic font */
+            color: #00ffcc; /* Neon teal color */
+            margin-bottom: 30px;
+            text-shadow: 0 0 20px #00ffcc; /* Glowing text effect */
+            font-size: 2.5em;
+        }
+        textarea {
             width: 100%;
-            height: 50px;
-            background-color: green; /* Ground color */
-            position: absolute;
-            bottom: 0;
+            height: 100px; /* Increased height for better visibility */
+            font-size: 18px;
+            padding: 10px;
+            border: 2px solid #00ffcc; /* Light teal border */
+            border-radius: 5px;
+            color: #00ff00;
+            background-color: #1b1b1b; /* Very dark background for contrast */
+            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); /* Teal glow effect */
+            transition: border-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
+            resize: none; /* Disable resize */
+        }
+        textarea::placeholder {
+            color: rgba(0, 255, 204, 0.7); /* Dimmed placeholder color */
+        }
+        textarea:focus {
+            outline: none;
+            border-color: #00ccff; /* Lighter border on focus */
+            box-shadow: 0 0 15px rgba(0, 204, 255, 0.8); /* Enhanced glow */
+        }
+        .glitch {
+            animation: glitch 1s infinite; /* Glitch animation for title */
+        }
+        .glitch-textarea {
+            animation: glitch 1s infinite; /* Glitch animation for text areas */
+        }
+        input[type=button] {
+            padding: 12px 20px;
+            font-size: 16px;
+            margin: 10px;
+            cursor: pointer;
+            border: 2px solid #00ffcc; /* Light teal border */
+            border-radius: 5px;
+            background-color: #1a1a1a; /* Matching dark background */
+            color: #00ffcc; /* Bright teal text */
+            transition: background 0.3s, color 0.3s, transform 0.2s, box-shadow 0.2s; /* Smooth transitions */
+            box-shadow: 0 3px 10px rgba(0, 204, 255, 0.5); /* Box shadow */
+        }
+        input[type=button]:hover {
+            background-color: #00ffcc; /* Button background changes on hover */
+            color: black; /* Black text on hover */
+            transform: translateY(-2px); /* Lifting effect during hover */
+            box-shadow: 0 6px 20px rgba(0, 204, 255, 0.8); /* Enhanced shadow on hover */
+        }
+        .terminal {
+            margin: 20px 0;
+            border-left: 4px solid #00ffcc; /* Bold left border to mimic terminal */
+            padding-left: 15px;
+            text-align: left;
+        }
+        @keyframes glitch {
+            0% { opacity: 1; transform: translate(0); }
+            20% { opacity: 0.8; transform: translate(-2px, -2px); }
+            40% { opacity: 1; transform: translate(2px, 2px); }
+            60% { opacity: 0.8; transform: translate(-2px, -2px); }
+            80% { opacity: 1; transform: translate(2px, 2px); }
+            100% { opacity: 1; transform: translate(0); }
         }
     </style>
 </head>
 <body>
-    <div id="gameArea">
-        <div id="character"></div>
-        <div class="ground"></div>
+
+<div class="container">
+    <h1 class="glitch">Spy Name Encryptor</h1>
+    
+    <div class="terminal">
+        <textarea id="myArea01" placeholder="Enter your text here...">Hello, how are you?</textarea>
     </div>
-    <script>
-        const character = document.getElementById('character');
-        let isJumping = false;
-        let position = 0;
 
-        // Function to make the character jump
-        function jump() {
-            if (isJumping) return;
-            isJumping = true;
+    <input type="button" value="Encrypt" onclick="encryptText()"><br>
 
-            let jumpHeight = 0;
-            const jumpInterval = setInterval(() => {
-                if (jumpHeight >= 100) {
-                    clearInterval(jumpInterval);
-                    
-                    // Start falling
-                    const fallInterval = setInterval(() => {
-                        if (jumpHeight <= 0) {
-                            clearInterval(fallInterval);
-                            isJumping = false;
-                        }
-                        jumpHeight -= 4; // Control fall speed
-                        character.style.bottom = `${position + jumpHeight}px`;
-                    }, 20);
-                }
-                jumpHeight += 4; // Control jump speed
-                character.style.bottom = `${position + jumpHeight}px`;
-            }, 20);
-        }
+    <div class="terminal">
+        <textarea id="myArea02" placeholder="Your encrypted text will appear here..." class="glitch-textarea" readonly></textarea>
+    </div>
 
-        // Listen for key presses to jump
-        document.addEventListener('keydown', (event) => {
-            if (event.code === 'Space') {
-                jump();
+    <input type="button" value="Decrypt" onclick="decryptText()"><br>
+
+    <div class="terminal">
+        <textarea id="myArea03" placeholder="Your decrypted text will appear here..." class="glitch-textarea" readonly></textarea>
+    </div>
+</div>
+
+<script>
+    function encryptText() {
+        let myTemp = '';
+        let myString = document.getElementById('myArea01').value.toLowerCase().split('');
+        for (let myLoop = 0; myLoop < myString.length; myLoop++) {
+            myTemp = myString[myLoop];
+            if (myString[myLoop] === 'e') {
+                myTemp = 'f';
+            } else if (myString[myLoop] === 'h') {
+                myTemp = 'i';
             }
-        });
-    </script>
+            myString[myLoop] = myTemp;
+        }
+        document.getElementById('myArea02').value = myString.join('');
+    }
+
+    function decryptText() {
+        let myTemp = '';
+        let myString = document.getElementById('myArea02').value.toLowerCase().split('');
+        for (let myLoop = 0; myLoop < myString.length; myLoop++) {
+            myTemp = myString[myLoop];
+            if (myString[myLoop] === 'f') {
+                myTemp = 'e';
+            } else if (myString[myLoop] === 'i') {
+                myTemp = 'h';
+            }
+            myString[myLoop] = myTemp;
+        }
+        document.getElementById('myArea03').value = myString.join('');
+    }
+</script>
+
 </body>
 </html>
